--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <form id="mainform" class="w-25 m-4" action="index.html" method="post">
+    <form id="mainform" class="w-25 m-4" action="index.html">
         <h2 class="mb-3">Login</h2>
         <div class="form-floating mb-3">
             <input
